updated for STS 3.1.0.M1

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -208,7 +208,7 @@
             name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.7">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -227,7 +227,7 @@
             name="Groovy 2.0 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.7">
          <iu id="org.codehaus.groovy20.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -256,7 +256,7 @@
          </overview>
       </connectorDescriptor>
 
-     <!-- Groovy-Eclipse for Juno 4.2 -->
+     <!-- Groovy-Eclipse for Juno 3.8 -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
@@ -266,8 +266,8 @@
             groupId="certified"
             name="Groovy-Eclipse"
             provider="Codehaus.org"
-            platformFilter="(platform.version&gt;=3.8.0)"
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e4.2">
+            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.8">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -285,8 +285,49 @@
             groupId="certified"
             name="Groovy 2.0 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
-            platformFilter="(platform.version&gt;=3.8.0)"
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e4.2">
+            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.8">
+         <iu id="org.codehaus.groovy20.feature" />
+         <icon
+               image32="images/groovy_32.png"></icon>
+         <overview
+               summary="The Groovy 2.0 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+               url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+         </overview>
+      </connectorDescriptor>
+      <!-- END Groovy-Eclipse -->
+
+     <!-- Groovy-Eclipse for Juno 4.2 -->
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
+            id="org.codehaus.groovy.eclipse.feature"
+            kind="task, document"
+            license="Free, EPL/ASL"
+            groupId="certified"
+            name="Groovy-Eclipse"
+            provider="Codehaus.org"
+            platformFilter="(platform.version&gt;=4.2.0)"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e4.2">
+         <iu id="org.codehaus.groovy.eclipse.feature" />
+         <icon
+               image32="images/groovy_32.png"></icon>
+         <overview
+               summary="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
+               url="http://groovy.codehaus.org/Eclipse+Plugin">
+         </overview>
+      </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="This feature provides the Groovy 2.0 compiler for Groovy-Eclipse.  Once installed, the 2.0 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+            id="org.codehaus.groovy20.feature"
+            kind="task, document"
+            license="Free, EPL/ASL"
+            groupId="certified"
+            name="Groovy 2.0 Compiler for Groovy-Eclipse"
+            provider="Codehaus.org"
+            platformFilter="(platform.version&gt;=4.2.0)"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e4.2">
          <iu id="org.codehaus.groovy20.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -327,7 +368,7 @@
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.7">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -346,8 +387,28 @@
             license="Free, EPL"
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
-            platformFilter="(platform.version&gt;=3.8.0)"
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e4.2">
+            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.8">
+         <icon
+               image32="images/grails_32.png">
+         </icon>
+         <overview
+               summary="Support for creating Grails projects, automatic dependency management, running commands and editing GSPs."
+               url="http://www.grails.org/STS+Integration">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Support for creating Grails projects, automatic dependency management, running commands and editing GSPs."
+            id="org.grails.ide.eclipse"
+            kind="task, document"
+            groupId="certified"
+            license="Free, EPL"
+            name="Grails Support"
+            provider="SpringSource, a division of VMware, Inc."
+            platformFilter="(platform.version&gt;=4.2.0)"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e4.2">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -368,7 +429,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.6.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.7">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -387,8 +448,28 @@
             license="Free, EPL"
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
-            platformFilter="(platform.version&gt;=3.8.0)"
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e4.2">
+            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.8">
+         <icon
+               image32="images/gradle_32.png">
+         </icon>
+         <overview
+               summary="Support for importing and working with Gradle projects in STS, automatic dependency management, executing Gradle tasks."
+               url="http://static.springsource.org/sts/docs/latest/reference/html/gradle/index.html">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Support for importing and working with Gradle projects in STS, automatic dependency management, executing Gradle tasks."
+            id="org.springsource.ide.eclipse.gradle.feature"
+            kind="task, document"
+            groupId="certified"
+            license="Free, EPL"
+            name="Gradle Support"
+            provider="SpringSource, a division of VMware, Inc."
+            platformFilter="(platform.version&gt;=4.2.0)"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e4.2">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -408,7 +489,39 @@
             name="Spring IDE"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.7">
+         <iu id="org.springframework.ide.eclipse.feature" />
+         <iu id="org.springframework.ide.eclipse.aop.feature" />
+         <iu id="org.springframework.ide.eclipse.ajdt.feature" />
+         <iu id="org.springframework.ide.eclipse.osgi.feature" />
+         <iu id="org.springframework.ide.eclipse.security.feature" />
+         <iu id="org.springframework.ide.eclipse.webflow.feature" />
+         <iu id="org.springframework.ide.eclipse.batch.feature" />
+         <iu id="org.springframework.ide.eclipse.integration.feature" />
+         <iu id="org.springframework.ide.eclipse.autowire.feature" />
+         <iu id="org.springframework.ide.eclipse.roo.feature" />
+         <iu id="org.springframework.ide.eclipse.mylyn.feature" />
+         <iu id="org.springframework.ide.eclipse.maven.feature" />
+         <iu id="org.springframework.ide.eclipse.data.feature" />
+         <icon
+               image32="images/springsource_32.png">
+         </icon>
+         <overview
+               summary="Full-featured support for working with Spring projects.">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Full-featured support for working with Spring projects"
+            id="org.springframework.ide.eclipse.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring IDE"
+            provider="SpringSource, a division of VMware, Inc."
+            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.8">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
@@ -440,7 +553,7 @@
             name="Spring IDE"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(platform.version&gt;=4.2.0)"
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e4.2">
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e4.2">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
@@ -723,7 +836,46 @@
             license="Free, EPL"
             name="VMware vFabric tc Server Integration for Eclipse"
             provider="VMware, Inc."
-            siteUrl="http://dist.springsource.com/release/TOOLS/update/3.0.0.RELEASE/e3.7">
+            platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.7">
+         <icon
+               image32="images/springsource_32.png">
+         </icon>
+         <overview
+               summary="%tcserver.description"
+               url="http://www.springsource.com/products/tcserver/devedition">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.runtimes"
+            description="VMware vFabric tc Server Integration for Eclipse"
+            id="com.vmware.vfabric.ide.eclipse.tcserver"
+            kind="task"
+            license="Free, EPL"
+            name="VMware vFabric tc Server Integration for Eclipse"
+            provider="VMware, Inc."
+            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.8">
+         <icon
+               image32="images/springsource_32.png">
+         </icon>
+         <overview
+               summary="%tcserver.description"
+               url="http://www.springsource.com/products/tcserver/devedition">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.runtimes"
+            description="VMware vFabric tc Server Integration for Eclipse"
+            id="com.vmware.vfabric.ide.eclipse.tcserver"
+            kind="task"
+            license="Free, EPL"
+            name="VMware vFabric tc Server Integration for Eclipse"
+            provider="VMware, Inc."
+            platformFilter="(platform.version&gt;=4.2.0)"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e4.2">
          <icon
                image32="images/springsource_32.png">
          </icon>
