--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -219,20 +219,20 @@
       </connectorDescriptor>
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="This feature provides the Groovy 2.0 compiler for Groovy-Eclipse.  Once installed, the 2.0 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
-            id="org.codehaus.groovy20.feature"
+            description="This feature provides the Groovy 2.1 compiler for Groovy-Eclipse.  Once installed, the 2.1 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+            id="org.codehaus.groovy21.feature"
             kind="task, document"
             license="Free, EPL/ASL"
             groupId="certified"
-            name="Groovy 2.0 Compiler for Groovy-Eclipse"
+            name="Groovy 2.1 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
             siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
-         <iu id="org.codehaus.groovy20.feature" />
+         <iu id="org.codehaus.groovy21.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
          <overview
-               summary="The Groovy 2.0 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+               summary="The Groovy 2.1 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
                url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
          </overview>
       </connectorDescriptor>
@@ -269,7 +269,6 @@
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
             siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
          <iu id="org.codehaus.groovy.eclipse.feature" />
-         <iu id="org.codehaus.groovy20.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
          <overview
@@ -277,27 +276,23 @@
                url="http://groovy.codehaus.org/Eclipse+Plugin">
          </overview>
       </connectorDescriptor>
-      <!-- END Groovy-Eclipse -->
-
-     <!-- Groovy-Eclipse for Juno 4.2 -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
-            id="org.codehaus.groovy.eclipse.feature"
+            description="This feature provides the Groovy 2.1 compiler for Groovy-Eclipse.  Once installed, the 2.1 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+            id="org.codehaus.groovy21.feature"
             kind="task, document"
             license="Free, EPL/ASL"
             groupId="certified"
-            name="Groovy-Eclipse"
+            name="Groovy 2.1 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
-            platformFilter="(platform.version&gt;=4.2.0)"
+            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
             siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
-         <iu id="org.codehaus.groovy.eclipse.feature" />
-         <iu id="org.codehaus.groovy20.feature" />
+         <iu id="org.codehaus.groovy21.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
          <overview
-               summary="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
-               url="http://groovy.codehaus.org/Eclipse+Plugin">
+               summary="The Groovy 2.1 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+               url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
          </overview>
       </connectorDescriptor>
       <connectorDescriptor
@@ -309,7 +304,66 @@
             groupId="certified"
             name="Groovy-Eclipse Configurator for M2Eclipse"
             provider="Codehaus.org"
-            platformFilter="(platform.version&gt;=3.8.0)"
+            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
+            siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.2/">
+         <iu id="org.codehaus.groovy.m2eclipse" />
+         <icon
+               image32="images/groovy_32.png"></icon>
+         <overview
+               summary="This feature provides the Groovy-Eclipse configurator for M2Eclipse"
+               url="http://groovy.codehaus.org/Groovy-Eclipse+compiler+plugin+for+Maven">
+         </overview>
+      </connectorDescriptor>
+
+     <!-- Groovy-Eclipse for Juno 4.2 -->
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
+            id="org.codehaus.groovy.eclipse.feature"
+            kind="task, document"
+            license="Free, EPL/ASL"
+            groupId="certified"
+            name="Groovy-Eclipse"
+            provider="Codehaus.org"
+            platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
+         <iu id="org.codehaus.groovy.eclipse.feature" />
+         <icon
+               image32="images/groovy_32.png"></icon>
+         <overview
+               summary="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
+               url="http://groovy.codehaus.org/Eclipse+Plugin">
+         </overview>
+      </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="This feature provides the Groovy 2.1 compiler for Groovy-Eclipse.  Once installed, the 2.1 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+            id="org.codehaus.groovy21.feature"
+            kind="task, document"
+            license="Free, EPL/ASL"
+            groupId="certified"
+            name="Groovy 2.1 Compiler for Groovy-Eclipse"
+            provider="Codehaus.org"
+            platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
+         <iu id="org.codehaus.groovy21.feature" />
+         <icon
+               image32="images/groovy_32.png"></icon>
+         <overview
+               summary="The Groovy 2.1 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+               url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+         </overview>
+      </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="This feature provides integration between Groovy-Eclipse and M2Eclipse. Only install this feature if you are using Groovy and Maven inside of STS"
+            id="org.codehaus.groovy.m2eclipse.feature"
+            kind="task, document"
+            license="Free, EPL"
+            groupId="certified"
+            name="Groovy-Eclipse Configurator for M2Eclipse"
+            provider="Codehaus.org"
+            platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
             siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.2/">
          <iu id="org.codehaus.groovy.m2eclipse" />
          <icon
